<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="18dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/minusButton"
                    android:layout_width="48dp"
                    android:layout_height="55dp"
                    android:background="@drawable/negative"
                    android:contentDescription="@string/minus_image_button"
                    android:importantForAccessibility="no" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:background="@drawable/frame5"
                    android:contentDescription="@string/play_amount_image_button"
                    android:importantForAccessibility="no" />

                <TextView
                    android:id="@+id/bet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/energy_amount"
                    android:importantForAccessibility="no"
                    android:text="@string/energy_text"
                    android:textColor="#850D11"
                    android:textSize="@dimen/jackpot"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/plusButton"
                    android:layout_width="48dp"
                    android:layout_height="55dp"
                    android:background="@drawable/positive"
                    android:contentDescription="@string/plus_image_button"
                    android:importantForAccessibility="no" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

